--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ var/
 share/
 bin/
 include/
-models/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -82,6 +81,7 @@ target/
 
 # exclude data from source control by default
 /data/
+/models/
 
 # Mac OS-specific storage files
 .DS_Store
