--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pyEDFlib==0.1.14
 pyparsing==2.3.1
 python-dateutil==2.8.0
 pytz==2018.9
-pywt==1.0.6
+PyWavelets==1.0.1
 requests==2.21.0
 scikit-learn==0.20.2
 scipy==1.2.1
@@ -24,3 +24,4 @@ tabulate==0.8.3
 torch==1.0.1.post2
 tqdm==4.31.1
 urllib3==1.24.1
+xgboost==0.81
