--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
+autograd==1.2
 bctpy==0.5.0
+Bottleneck==1.2.1
 certifi==2018.11.29
 chardet==3.0.4
 cycler==0.10.0
 decorator==4.3.2
+future==0.17.1
 idna==2.8
+joblib==0.13.2
 kiwisolver==1.0.1
+lifelines==0.19.5
 matplotlib==3.0.2
 networkx==2.2
 numpy==1.16.1
 pandas==0.24.1
+patsy==0.5.1
 pyEDFlib==0.1.14
 pyparsing==2.3.1
 python-dateutil==2.8.0
@@ -20,6 +26,7 @@ scipy==1.2.1
 seaborn==0.9.0
 six==1.12.0
 skorch==0.5.0.post0
+statsmodels==0.9.0
 tabulate==0.8.3
 torch==1.0.1.post2
 tqdm==4.31.1
